[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/SeatSpawner.gd" type="Script" id=1]
[ext_resource path="res://Sprites/NormalEnemies/MrVibeSheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/EnemySpeech.png" type="Texture" id=3]
[ext_resource path="res://Scenes/EnemyArea.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.9245, 28.7869 )

[node name="SeatSpawner" type="Node2D"]
position = Vector2( 383.166, 274.136 )
script = ExtResource( 1 )

[node name="Enemy" type="Area2D" parent="."]
visible = false
scale = Vector2( 3, 3 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Enemy"]
texture = ExtResource( 2 )
hframes = 5

[node name="Hitbox" type="CollisionShape2D" parent="Enemy"]
position = Vector2( 0.0297241, -6.91229 )
shape = SubResource( 1 )
disabled = true

[node name="BubbleSprite" type="Sprite" parent="Enemy"]
visible = false
position = Vector2( -25.2215, -56.686 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 3 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4096.0
one_shot = true

[node name="AngerTimer" type="Timer" parent="."]

[node name="Door" type="Position2D" parent="."]
position = Vector2( 134.873, -155.292 )

[node name="Seat" type="Position2D" parent="."]
position = Vector2( 134.873, -155.292 )

[node name="TweenToSeat" type="Tween" parent="."]

[node name="TweenToDoor" type="Tween" parent="."]
[connection signal="Death" from="Enemy" to="." method="_on_Enemy_Death"]
[connection signal="DrinkGot" from="Enemy" to="." method="_on_Enemy_DrinkGot"]
[connection signal="area_entered" from="Enemy" to="Enemy" method="_on_Enemy_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="AngerTimer" to="." method="_on_AngerTimer_timeout"]
[connection signal="tween_all_completed" from="TweenToSeat" to="." method="_on_TweenToSeat_tween_all_completed"]
